--- a/styles.css
+++ b/styles.css
@@ -494,6 +494,7 @@ main {
     min-height: 90vh;
     background-color: #f8f9fa;
 	margin-top: 80px;
+	scroll-margin-top: 100px; /* Adjust based on your fixed header height */
 }
 
 .about-container {
