--- a/styles.css
+++ b/styles.css
@@ -928,7 +928,7 @@ appflashmain {
 .appflash-nav {
   display: flex;
   justify-content: center;
-  gap: 20rem;
+  gap: 1rem;
   padding: 0px;
   position: absolute; /* Position the arrows absolutely inside the wrapper */
   bottom: 20px; /* Position arrows at the bottom */
@@ -947,6 +947,28 @@ appflashmain {
 
 .appflash-nav-arrow:hover {
   color: #007BF9;
+}
+
+.appflash-dots {
+  display: flex;
+  gap: 10px;
+  align-items: center;
+  justify-content: center;
+}
+
+.appflash-dot {
+  width: 12px;
+  height: 12px;
+  background-color: #888;
+  border-radius: 50%;
+  opacity: 0.5;
+  transition: opacity 0.3s, background-color 0.3s;
+  cursor: pointer;
+}
+
+.appflash-dot.active {
+  opacity: 1;
+  background-color: #fff;
 }
 
 /* Responsive Design */
