--- a/styles.css
+++ b/styles.css
@@ -803,6 +803,7 @@ appflashmain {
 .appflash-slider {
   display: flex;
   transition: transform 0.5s ease;
+  will-change: transform;
   width: 100%;
   height: 100%;
   background: linear-gradient(to right, #3a2f6f, #151338);
